@@ -1,6 +1,12 @@
 Changelog
 =========
 
+2014/06/22 (v0.3.4)
+ - adding PortScannerYield class with generator
+   >>> nm = nmap.PortScannerYield()
+   >>> for i in nm.scan('127.0.0.1/24', '22-25'):
+   >>>     print(i)
+
 2014/03/13 (v0.3.3)
  - moving file example.py
  - adding function convert_nmap_output_to_encoding
